* Added zztong_tfp_remnant_industrial_04
* Added zztong_studio_01
* Added zztong_speleological_society_01
* Added zztong_tfp_church_sm_01 because somebody wanted a wilderness church.
* Added zztong_store_xs_19.
* Added zztong_trailer_04.
* Added Deco: cactus_06, cactus_07, cactus_08, rubble_32, remains_01, remains_02.
* Added zztong_wilderness_filler_01, zztong_wilderness_filler_02.
* Added zztong_rural_filler_05, zztong_rural_filler_06.

V1.3.026 (ZZ026)
* Added translations to Localization.txt.
* The schinese translation was provided by Croeater477427.
* I now have a script to get translations from Google Translate.

V1.3.025 (ZZ025)
* Bug fixes. No new content.

V1.2.024 (ZZ024)
* Added rwg_tile_countrytown_t_zztong_01 - Town Square. (Limited occurrences)
* Added rwg_tile_rural_corner_zztong_06
* Added rwg_tile_rural_t_zztong_05
* Added rwg_tile_rural_t_zztong_06
* Added zztong_cheerdancegym_01
* Added zztong_cryptominer_01
* Added zztong_farm_09
* Added zztong_revival_01
* Bug fixes. (Including zztong_bartertown_joelx.ins file. Hurray!)

V1.1.023 (ZZ023)
* Bug fixes: floating blocks, tile tags, bridge gutters.
* Zombie volume adjustments in zztong_tfp_apartment_adobe_01.
* Added rwg_tile_rural_cap_zztong_02 and rwg_tile_rural_cap_zztong_03.
* Added rwg_tile_rural_corner_zztong_03, rwg_tile_rural_corner_zztong_04,
    and rwg_tile_rural_corner_zztong_05.
* Added rwg_tile_rural_t_zztong_02, rwg_tile_rural_t_zztong_03,
    and rwg_tile_rural_t_zztong_04.
* Slimmed down number of XS POIs on rwg_tile_rural_t_zztong_01
    and rwg_tile_rural_cap_zztong_01.
* Added zztong_cabin_01, zztong_cabin_02, zztong_landscaper_01, zztong_library_01.
* Added zztong_outback_adventure_01, zztong_fire_academy_01.
* Added zztong_trailer_03, zztong_gas_station_01, zztong_store_xs_17, zztong_store_xs_18.
* Added zztong_rural_filler_01, zztong_rural_filler_02, zztong_rural_filler_03, zztong_rural_filler_04.