@@ -290,5 +290,6 @@ zztong_watering_hole_01,POI,POI,,x,Watering Hole,,Wasserloch,Abrevadero,Trou d'a
 zztong_watering_hole_02,POI,POI,,x,Mega Dew Collector,,Mega Dew -Sammler,Coleccionista de mega rocío,Méga collectionneur,Mega Dew Collector,メガデューコレクター,메가 듀 수집가,Mega Collector,Mega Dew Collector,Mega Dew Collector,Mega Dew Toplayıcı,巨型露水收集器,巨型露水收集器
 zztong_wilderness_filler_01,POI,POI,,x,Stoneveil Copse,,Stoneveil Copse,StoneVeil Copse,Stoneveil Copse,Stoneveil Copse,Stoneveil Copse,스톤 브럼 코스,Stoneveil Copse,Stoneveil Copse,Стоунвейл Копс,StoneLeil Copse,Stoneveil Copse,Stoneveil Copse
 zztong_wilderness_filler_02,POI,POI,,x,Whispering Copse,,Flüstern,Copina de susurro,Chuchotement,Sussurrando copse,ささやき声,속삭이는 경찰,Szepczący copse,Sussurrando bosques,Шепот Копсе,Fısıldayan Copse,窃窃私语,竊竊私語
+zztong_wilderness_filler_03,POI,POI,,x,Hunter's Blind,,Jäger ist blind,Ciego del cazador,Le chasseur est aveugle,Hunter's Blind,ハンターの盲目,사냥꾼의 장님,Ślepy Huntera,Hunter é cego,Охотник слепой,Avcı Körü,猎人的盲人,獵人的盲人
 zztong_wind_turbine_01,POI,POI,,x,Wind Turbine,,Windkraftanlage,Turbina eólica,Éolienne,Turbina eolica,風力タービン,풍력 터빈,Turbina wiatrowa,Turbina eólica,Ветряная турбина,Rüzgar türbini,风力发电机,風力渦輪機
 zztong_wind_turbine_02,POI,POI,,x,Wind Turbine Remnant,,Windkraftanlagenreste,Remanente de la turbina eólica,Éolienne reste,Residuo della turbina eolica,風力タービン残骸,풍력 터빈 잔해,Pozostałość turbiny wiatrowej,Remanescente da turbina eólica,Остаток ветряной турбины,Rüzgar türbini kalıntısı,风力发电机残骸,風力渦輪機殘留
