@@ -1,0 +1,68 @@
+﻿<?xml version="1.0" encoding="UTF-8"?>
+<prefab>
+  <property name="CopyAirBlocks" value="True" />
+  <property name="ExcludeDistantPOIMesh" value="False" />
+  <property name="ExcludePOICulling" value="False" />
+  <property name="DistantPOIYOffset" value="0" />
+  <property name="AllowTopSoilDecorations" value="False" />
+  <property name="DifficultyTier" value="0" />
+  <property name="ShowQuestClearCount" value="1" />
+  <property name="TraderArea" value="False" />
+  <property name="YOffset" value="-3" />
+  <property name="PrefabSize" value="25, 24, 25" />
+  <property name="RotationToFaceNorth" value="2" />
+  <property name="EditorGroups" value="Wilderness" />
+  <property name="Tags" value="wilderness" />
+  <property name="DuplicateRepeatDistance" value="2000" />
+  <property name="Zoning" value="none" />
+  <property class="IndexedBlockOffsets">
+    <property class="quest_wood_trees">
+      <property name="0" value="22, 3, 16" />
+      <property name="1" value="19, 4, 20" />
+    </property>
+    <property class="quest_wood">
+      <property name="0" value="14, 5, 12" />
+    </property>
+    <property class="challenge_mech_parts">
+      <property name="0" value="11, 8, 9" />
+    </property>
+    <property class="TraderOnOff">
+      <property name="0" value="11, 8, 12" />
+    </property>
+    <property class="quest_stone_boulder">
+      <property name="0" value="8, 5, 14" />
+    </property>
+  </property>
+  <property class="Stats">
+    <property name="TotalVertices" value="74450" />
+    <property name="TotalTriangles" value="77885" />
+    <property class="BlockEntities">
+      <property name="Vertices" value="68312" />
+      <property name="Triangles" value="72245" />
+    </property>
+    <property class="ChunkMeshes0">
+      <property name="Vertices" value="4216" />
+      <property name="Triangles" value="2276" />
+    </property>
+    <property class="ChunkMeshes1">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes2">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes3">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes4">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes5">
+      <property name="Vertices" value="1922" />
+      <property name="Triangles" value="3364" />
+    </property>
+  </property>
+</prefab>
